[package]
name = "ibc-grpc-server"
version = "0.1.0"
edition = "2021"
authors = ["Nervos Network", "Eason Gao <kaoimin@qq.com>"]
license = "MIT"
keywords = ["ibc", "grpc"]
categories = ["Web programming"]
repository = "https://github.com/axonweb3/ibc-grpc-server"
description = "IBC gRPC server implementation."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
ibc = "0.20"
ibc-proto = { version = "0.21", features = ["server"] }
log = "0.4"
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
